--- a/css/style.css
+++ b/css/style.css
@@ -19,8 +19,8 @@ img {
 
 @font-face {
     font-family: "OpenSans";
-    src: local("OpenSans-Regular"), url("../fonts/OpenSansRegular.woff2") format("woff2"), 
-                                    url("../fonts/OpenSansRegular.woff"), format("woff");
+    src: local("OpenSans-Regular"), url("../fonts/OpenSansRegular.woff2") format("woff2"),
+                                    url("../fonts/OpenSansRegular.woff") format("woff");
     font-weight: 400;
     font-style: normal;
     font-display: swap;
@@ -28,8 +28,8 @@ img {
 
 @font-face {
     font-family: "OpenSans";
-    src: local("OpenSans-Light"), url("../fonts/OpenSansLight.woff2") format("woff2"), 
-                                    url("../fonts/OpenSansLight.woff"), format("woff");
+    src: local("OpenSans-Light"), url("../fonts/OpenSansLight.woff2") format("woff2"),
+                                    url("../fonts/OpenSansLight.woff") format("woff");
     font-weight: 300;
     font-style: normal;
     font-display: swap;
@@ -37,8 +37,8 @@ img {
 
 @font-face {
     font-family: "OpenSans";
-    src: local("OpenSans-SemiBold"), url("../fonts/OpenSansSemiBold.woff2") format("woff2"), 
-                                    url("../fonts/OpenSansSemiBold.woff"), format("woff");
+    src: local("OpenSans-SemiBold"), url("../fonts/OpenSansSemiBold.woff2") format("woff2"),
+                                    url("../fonts/OpenSansSemiBold.woff") format("woff");
     font-weight: 600;
     font-style: normal;
     font-display: swap;
@@ -410,6 +410,104 @@ body {
     font-size: 14px;
     line-height: 180%;
     color: #787878;
+}
+
+/* join-us */
+.join-us {
+  border-bottom: 1px solid #c4c4c4;
+}
+
+.join-us-title {
+  text-align: center;
+}
+
+.join-us-descr {
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.form {
+  padding-left: 55px;
+  padding-right: 55px;
+}
+
+.form-input {
+  border: 1px solid #DADADA;
+  border-radius: 50px;
+  box-sizing: border-box;
+  padding: 16px 28px;
+  width: 251px;
+  height: 60px;
+}
+
+.form-input:nth-child(-n+2) {
+  margin-bottom: 19px;
+}
+
+.form-select {
+  border: 1px solid #0E3B6C;
+  border-radius: 50px;
+  box-sizing: border-box;
+  padding: 16px 28px;
+  width: 251px;
+  height: 60px;
+}
+
+.form-textarea {
+  border: 1px solid #DADADA;
+  border-radius: 20px;
+  box-sizing: border-box;
+  resize: none;
+  padding: 16px 28px;
+  width: 100%;
+  height: 100%;
+}
+
+.form-bottom {
+  justify-content: flex-end;
+}
+
+.form-wrapper {
+  flex-direction: column;
+  align-items: center;
+}
+
+.form-btn {
+  min-width: 230px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-radius: 50px;
+  margin-bottom: 9px;
+}
+
+.form-check {
+  font-size: 12px;
+  line-height: 16px;
+  color: #787878;
+}
+
+.form-check input {
+  margin-right: 8px;
+}
+
+.form-check a {
+  color: #3172B9;
+  border-bottom: 1px solid #3172B9;
+}
+
+.form-top {
+  justify-content: space-between;
+  margin-bottom: 19px;
+}
+
+.form-left {
+  width: 49%;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.form-right {
+  width: 49%;
 }
 
 /* footer */
