--- a/css/style.css
+++ b/css/style.css
@@ -99,10 +99,10 @@ body {
 .header {
     padding: 36px 0;
     border-bottom: 1px solid #c4c4c4;
-    background-color: #ffffff;
+    background-color: #fff;
 }
 
-.header-link {
+.nav__link {
   position: relative;
   font-weight: 600;
   color: #1c1c1c;
@@ -110,16 +110,16 @@ body {
   transition: color 0.3s ease-in-out;
 }
 
-.header-link:focus {
+.nav__link:focus {
   outline-offset: 2px;
   outline: 1px solid #71A7E2;
 }
 
-.header-link:hover {
+.nav__link:hover {
   color: #71A7E2;
 }
 
-.header-link::after {
+.nav__link::after {
   content: "";
   position: absolute;
   left: 0;
@@ -131,28 +131,28 @@ body {
   transition: opacity 0.3s ease-in-out;
 }
 
-.header-link:active {
+.nav__link:active {
   color: #3172B9;
   outline: none;
 }
 
-.header-link:active::after {
+.nav__link:active::after {
   opacity: 1;
 }
 
-.header-container {
+.header__container {
     align-items: center;
 }
 
-.header-logo {
+.header__logo {
     margin-right: auto;
 }
 
-.header-nav {
+.header__nav {
     margin-right: 52px;
 }
 
-.header-list-item:not(:last-child) {
+.nav__item:not(:last-child) {
     margin-right: 52px;
 }
 
@@ -209,13 +209,13 @@ body {
     background-position: center;
 }
 
-.home-content {
+.home__content {
     max-width: 50%;
     flex-direction: column;
     align-items: flex-start;
 }
 
-.home-title {
+.home__title {
     margin: 0;
     margin-bottom: 25px;
     font-weight: 300;
@@ -223,7 +223,7 @@ body {
     line-height: 130%;
 }
 
-.home-descr {
+.home__descr {
     margin: 0;
     margin-bottom: 34px;
     font-size: 16px;
@@ -231,7 +231,7 @@ body {
     color: #787878;
 }
 
-.home-btn {
+.home__btn {
     margin-bottom: 14px;
     min-width: 250px;
     padding-top: 20px;
@@ -239,7 +239,7 @@ body {
     margin-bottom: 14px;
 }
 
-.home-secure {
+.home__secure {
     font-size: 11px;
     line-height: 155%;
     color: #787878;
@@ -251,7 +251,7 @@ body {
     padding-left: 30px;
 }
 
-.home-wrapper {
+.home__wrapper {
     flex-direction: column;
     align-items: center;
 }
@@ -726,7 +726,7 @@ body {
     color: #787878;
 }
 
-.footer-link {
+.nav__link {
     font-weight: 400;
     font-size: 12px;
     line-height: 16px;
@@ -734,16 +734,16 @@ body {
     transition: color 0.3s ease-in-out;
 }
 
-.footer-link:focus {
+.nav__link:focus {
   outline-offset: 2px;
   outline: 1px solid #71A7E2;
 }
 
-.footer-link:hover {
+.nav__link:hover {
   color: #71A7E2;
 }
 
-.footer-link::after {
+.nav__link::after {
   content: "";
   position: absolute;
   left: 0;
@@ -755,11 +755,11 @@ body {
   transition: opacity 0.3s ease-in-out;
 }
 
-.footer-link:active {
+.nav__link:active {
   outline: none;
 }
 
-.footer-link:active::after {
+.nav__link:active::after {
   opacity: 1;
 }
 
@@ -777,12 +777,12 @@ body {
     margin-right: 25px;
 }
 
-.footer-item:not(:last-child) {
-    margin-right: 28px;
+.footer__nav {
+  margin-right: 56px;
 }
 
-.footer-nav {
-    margin-right: 56px;
+.footer__nav .nav__item:not(:last-child) {
+    margin-right: 28px;
 }
 
 .social-link {
